--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -27,6 +27,10 @@
   bottom: 20px;
   z-index: 9999;
 }
+.btn-primary:disabled{
+  background-color: #C2BEBE;
+  color: #313030;
+}
 
 
 /* Phone Only */
