--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -187,7 +187,7 @@
                     </mat-form-field>
                 </div>
 
-                <div class="field">
+                <!-- <div class="field">
                     <mat-form-field>
                         <mat-label>Address</mat-label>
                         <input matInput placeholder="City"  [(ngModel)]="Address.Match_addr" />
@@ -199,7 +199,7 @@
                         <mat-label>Region</mat-label>
                         <input matInput placeholder="Region"  [(ngModel)]="Address.Region"/>
                     </mat-form-field>
-                </div>
+                </div> -->
                 
                 <div class="field">
                     <div class="verify-phone">
